--- a/PresenzeDelta/src/main/webapp/resources/css/error.css
+++ b/PresenzeDelta/src/main/webapp/resources/css/error.css
@@ -1,6 +1,6 @@
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-@import "menu.css";
+@import "common/menu.css";
 
 body {
 background-image: url("../images/.jpg");
