--- a/PresenzeDelta/src/main/webapp/resources/css/users/panel.css
+++ b/PresenzeDelta/src/main/webapp/resources/css/users/panel.css
@@ -1,8 +1,8 @@
 /* service tabs */
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-@import "menu.css";
-@import "use.fontawesome.com.5.6.3.css";
+@import "../common/menu.css";
+@import "../common/use.fontawesome.com.5.6.3.css";
 body {
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
