--- a/PresenzeDelta/src/main/webapp/resources/css/presenze/riepilogo.css
+++ b/PresenzeDelta/src/main/webapp/resources/css/presenze/riepilogo.css
@@ -23,6 +23,7 @@ li {
     transition: 0.5s;
 }
 
+
 .delta_services ul li a {
     display: block;
     color: #fff;
@@ -32,6 +33,7 @@ li {
     transition: 0.5s;
 }
 
+
 .delta_services ul li a span.icon {
     width: 50px;
     display: block;
@@ -40,6 +42,7 @@ li {
     float: left;
 }
 
+
 .delta_services ul li a span.text {
     display: block;
     vertical-align: middle;
@@ -47,4 +50,33 @@ li {
     margin-left: 50px;
   /*  padding-top: 12px;*/
 }
+
+li.disabled {
+  cursor: not-allowed;
+}
+li.disabled a {
+  pointer-events: none;
+}
+
+.table-riepilogo td, .table-riepilogo th
+{
+    border-top: 1px solid #343A40;
+    color: #343A40;
+}
+
+.table-riepilogo thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #343A40;
+}
+
+.table-riepilogo td, .table-riepilogo th {    
+    border-top: 1px solid #343A40;
+}
+
+.table-riepilogo {
+    display: table;  
+    border-spacing: 2px;
+    border-color: #343A40;
+}
+
 
